@@ -68,6 +68,7 @@ tasks.register<Test>("functionalTest") {
 }
 
 tasks.test {
+    jvmArgs("--add-opens","java.base/java.lang=ALL-UNNAMED")
     filter{
         excludeTestsMatching("*FunctionalTest")
     }
